test/sema/positive/methods8.impala
trait T[A] {
    fn m(Self, A) -> A;
}

fn main[B:T[int]+T[bool]](b: B) -> () {
    let c: bool = b.m(true);
    let d: int = b.m(5);
}
