test/sema/negative/methods01.impala
trait T {}
impl T for i32 {}

fn main() -> () {
    let b: bool = (5).m();
}
